review/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-$CI_PROJECT_NAME
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - $CI_PROJECT_NAME.$ENV_DNS
    secretName: $K8_TLS_SECRET
  rules:
  - host: $CI_PROJECT_NAME.$ENV_DNS
    http:
      paths:
      - path: /$CI_COMMIT_REF_SLUG
        backend:
          serviceName: service-$CI_COMMIT_REF_SLUG
          servicePort: 80
